removed line from quote; attempting fix for too tall on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -21,6 +21,7 @@ html {
   color: var(--color-main);
   background: var(--color-bg);
   -webkit-text-size-adjust: 100%;
+  height: 100vh;
 }
 
 /* reset */
@@ -47,7 +48,7 @@ body {
   align-items: center;
   box-sizing: border-box;
   padding: var(--spacing-s);
-  min-height: 100vh;
+  min-height: 100%;
 }
 
 header {
@@ -253,19 +254,13 @@ img {
     margin-right: 0;
     max-width: 100%;
   }
-  .main--home p {
+  .main--home p:not(.nav-toggle):not(.caption) {
     margin-top: var(--spacing-m);
     margin-left: 0;
     border-left: 0;
     padding: 0;
   }
-  .main--home p:before {
-    display: block;
-    content: " ";
-    margin-bottom: var(--spacing-s);
-    width: 15%;
-    border-top: 2px solid var(--color-highlight);
-  }
+  
   /* nav */
   h1 {
     margin-bottom: var(--spacing-s);
